<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">DTV Antennas</string>
    <string name="action_settings">Preferences</string>
	<string name="action_ayuda">Help with digital TV</string>
	<string name="action_ayuda_ar">Help with TVD</string>
	<string name="action_ayuda_uk">Check Freeview coverage</string>
    <string name="action_niqueco">\@niqueco</string>
    <string name="title_activity_mapa">Antennas map</string>
    <string name="action_mapa">Map</string>
    <string name="no_se_encontraron_antenas">No antennas found in the configured ratio of %s.</string>
    <string name="podes_incrementar_radio">You can try incrementing that ratio in the preferences.</string>
    <string name="no_ubicacion">Couldn\'t acquire location… Is GPS off?</string>
	<string name="app_no_disponible">No application available to handle this operation.</string>
	<string name="some_more" tools:ignore="PluralsCandidate">%d more</string>
	<string name="channel_number">channel %s</string>
	<string name="ch_number">ch. %s</string>
	<string name="gps_is_off">GPS is off!</string>
	<string name="gps_prender">Turn it on</string>
	<string name="solicitar_permiso">Ask permission</string>
	<string name="explicacion_permiso_gps">This app needs access to your GPS to know where you are and thus help you with finding the best TV antennas for you!</string>
	<string name="polarización_horizontal">Horizontal pol.</string>
	<string name="polarización_vertical">Vertical pol.</string>
	<string name="polarización_mezclada">Mixed pol.</string>
	<string name="polarización_dual">Dual polarization</string>
	<string name="calif_titulo">Can you help me?</string>
	<string name="calif_texto">If this application is useful to you and you think it makes sense that I continue to improve it I ask that you take a few seconds and rate it.</string>
	<string name="calif_boton_si">OK, I\'ll put the stars!</string>
	<string name="calif_boton_despues">Remind me later</string>
	<string name="calif_boton_nunca">I\'ll never do that</string>
	<string name="aviso_lejos_fcc">Out of reach according to FCC computations.</string>
	<string name="aviso_no_hay_brújula">No compass in device. Showing absolute bearings.</string>
	<string name="aviso_brújula_1">Compasses in phones are not that good. Not only are they unreliable but often they need to be “calibrated”. They can also get stuck, in which case you may try gently hitting your phone until they get unstuck.</string>
	<string name="aviso_brújula_2">Click below to read Google\'s instructions for calibrating your device\'s compass.</string>
	<string name="botón_ayuda_brújula">Compass calibration help</string>
	<string name="título_ayuda_calibración_brújula">Compass calibration</string>
	<string name="tv_título">Nearby TV antennas</string>
	<string name="tv_baja_la_app">Get the mobile app to use compass mode!</string>
	<string name="aviso_demora_ubicación">Getting location data is taking more than it should. Check the GPS is enabled or, if network based location is used, check that WiFi is working OK.</string>
	<string name="shortcut_mapa_short_label">Antenna map</string>
	<string name="pagar">Remove ads</string>
	<string name="ver_precio">Check price</string>
	<string name="thankyou">Thank you!</string>
	<string name="pagame_texto">My name is Nicolás Lichtmaier. I\'m the sole creator, designer, data curator behind this app. If you find it useful I ask you to consider contributing some small amount of money. In exchange you will no longer see those ugly ads.</string>
	<string name="pagame_saludo">Hi!</string>
	<string name="pagame_boton">Buy Pro edition</string>
	<string name="pagame_gracias">Thanks for using this app!</string>
	<string name="no_se_puede_pagar">Payment cannot be initiated at this time. Please try again later.</string>
	<string name="dist_away_comentario">(%s away)</string>
	<string name="dist_away_solo">%s away</string>
	<string name="título_lugar">Antennas around %s</string>
	<string name="elegir_lugar">Choose place</string>
	<string name="distancia_de">%1$s from %2$s</string>
	<string name="cambiar_lugar_cuesta">Getting information for another location is only available in the paid version.</string>
	<string name="pago_no_verificado">No se pudo verificar la situación de pago</string>
	<string name="ayuda_una_antena_mapa_titulo">View this antenna on the map</string>
	<string name="ayuda_una_antena_mapa_texto">When you go to the map from this view the current antenna will be selected.</string>
	<string name="ayuda_una_antena_mapa_estacion_titulo">Check coverage</string>
	<string name="ayuda_una_antena_mapa_estacion_texto">Touching a station you go to the map with that station selected.</string>
	<string name="mapa_físico">Physical map</string>
	<string name="mapa_satelital">Satellite map</string>
	<string name="separator">", "</string>
	<string name="unlikely">It\'s unlikely you can get signal from antennas beyond %s.</string>

	<plurals name="senales">
		<item quantity="one">%1$,d channel</item>
		<item quantity="other">%1$,d channels</item>
	</plurals>
	<plurals name="hacia_adelante">
		<item quantity="other">Forward</item>
	</plurals>
	<plurals name="grados_derecha">
		<item quantity="one">%d degree right</item>
		<item quantity="other">%d degrees right</item>
	</plurals>
	<plurals name="grados_izquierda">
		<item quantity="one">%d degree left</item>
		<item quantity="other">%d degrees left</item>
	</plurals>
	<plurals name="hacia_atras">
		<item quantity="other">Backwards</item>
	</plurals>
	<plurals name="more">
		<item quantity="one">one more</item>
		<item quantity="other">%d more</item>
	</plurals>
	<plurals name="antenas_en_distancia">
		<item quantity="one">%d antenna within that distance</item>
		<item quantity="other">%d antennas within that distance</item>
	</plurals>

</resources>
