<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ar.com.lichtmaier.tda.AntenaActivity">

    <item
        android:id="@+id/action_mapa"
        android:title="@string/action_mapa"
        android:icon="@drawable/ic_action_mapa_antenas"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

	<item
		android:visible="false"
		android:id="@+id/action_ayuda_ar"
		android:title="@string/action_ayuda_ar"
		app:showAsAction="never"/>

	<item
		android:visible="false"
		android:id="@+id/action_ayuda_uk"
		android:title="@string/action_ayuda_uk"
		app:showAsAction="never"/>

    <item
        android:id="@+id/action_niqueco"
        android:title="@string/action_niqueco"
        app:showAsAction="never"/>

</menu>
