<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calif_texto"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:lineSpacingMultiplier="1.4"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/botón_sí_califico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/calif_boton_si"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/botón_después_califico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/calif_boton_despues"
                style="@style/Widget.AppCompat.Button.Borderless"
                />

            <Button
                android:id="@+id/botón_nunca_califico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/calif_boton_nunca"
                style="@style/Widget.AppCompat.Button.Borderless"
                />

        </LinearLayout>
    </LinearLayout>

</ScrollView>