<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingLeft="24dp"
		android:paddingRight="24dp"
		android:paddingTop="16dp"
		android:paddingBottom="16dp">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_margin="4dp"
			app:srcCompat="@drawable/ic_compass_white_48dp"
			android:contentDescription="@null"
			tools:ignore="MissingPrefix"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8sp"
			android:text="@string/aviso_brújula_1"
			android:textAppearance="@style/TextAppearance.AppCompat.Body1"
			android:textIsSelectable="true"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8sp"
			android:text="@string/aviso_brújula_2"
			android:textAppearance="@style/TextAppearance.AppCompat.Body1"
			android:textIsSelectable="true"
			/>

		<Button
			android:id="@+id/botón_ayuda_calibración"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/botón_ayuda_brújula"
			style="@style/Widget.AppCompat.Button.Borderless.Colored"
			/>

	</LinearLayout>

</ScrollView>