<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:text="@string/pagame_saludo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:id="@+id/label_hi"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:gravity="center_horizontal"
        />

    <TextView
        android:text="@string/pagame_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="0"
        android:id="@+id/label_pagame"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:lineSpacingMultiplier="1.2"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:breakStrategy="simple"
        tools:ignore="UnusedAttribute"
        />

    <Button
        android:text="@string/pagame_boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="0"
        android:id="@+id/boton_comprar"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.Button.Colored"
        />

    <TextView
        android:text="@string/pagame_gracias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="?android:textColorSecondary"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_horizontal"
        />

    <ImageView
        android:id="@+id/pagame_carita"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/ic_emoji_u1f603"
        android:contentDescription="@null"
        />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
</LinearLayout>
